--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <img src="imagens/logo-metal.png" alt="Arranjos para Metais">
             </div>
             <div class="header-content">
-                <h1>DOS LOUVORES MAIS TOCADOS</h1>
-                <p>Arranjos Profissionais para Naipe de Metais</p>
+                <h1>ARRANJOS PROFISSIONAIS PARA NAIPE DE METAIS</h1>
+                <p></p>
                 <div class="countdown">
                     <p>Oferta especial por tempo limitado:</p>
                     <div id="countdown-timer">
