--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                                 <i class="fas fa-music"></i>
                             </div>
                             <div class="feature-text">
-                                <strong>Arranjos profissionais</strong> dos louvores mais tocados
+                                <strong></strong> dos louvores mais tocados
                             </div>
                         </li>
                         <li>
@@ -69,7 +69,7 @@
                                 <i class="fas fa-file-pdf"></i>
                             </div>
                             <div class="feature-text">
-                                <strong>Partituras em PDF</strong> para cada instrumento + grade geral
+                                <strong></strong> para cada instrumento + grade geral
                             </div>
                         </li>
                         <li>
@@ -77,7 +77,7 @@
                                 <i class="fas fa-file-alt"></i>
                             </div>
                             <div class="feature-text">
-                                <strong>Arquivos Sibelius e XML</strong> para edição no Musescore, Finale, etc
+                                <strong></strong> para edição no Musescore, Finale, etc
                             </div>
                         </li>
                         <li>
@@ -85,7 +85,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <div class="feature-text">
-                                <strong>Bônus exclusivo:</strong> Videoaulas de técnicas para metais
+                                <strong></strong> Videoaulas de técnicas para metais
                             </div>
                         </li>
                     </ul>
