--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="offer-box">
       <h3>Dos Louvores Mais Tocados ➡️</h3>
       <div class="offer-content">
-        <h4>15 Arranjos/Naipe de METAIS</h4>
+        <h4><strong><span style="color: yellow;">15 Arranjos</span></strong>/Naipe de METAIS</h4>
         <p class="old-price">De R$ 1.050</p>
         <p class="new-price">Por R$ 199,90</p>
         <p class="per-item">(R$ 13,32 cada arranjo)</p>
@@ -58,7 +58,7 @@
     <div class="offer-box">
       <h3>Dos Louvores Mais Tocados ⬅️</h3>
       <div class="offer-content">
-        <h4>50 Arranjos/Naipe de METAIS</h4>
+        <h4><strong><span style="color: yellow;">50 Arranjos</span></strong>/Naipe de METAIS</h4>
         <p class="old-price">De R$ 3.500</p>
         <p class="new-price">Por R$ 399,90</p>
         <p class="per-item">(R$ 7,99 cada arranjo)</p>
