--- a/index.html
+++ b/index.html
@@ -30,17 +30,24 @@
                 </div>
             </div>
         </div>
-        
-        <!-- Efeitos de palco -->
-        <div class="stage-effects">
-            <div class="laser"></div>
-            <div class="laser"></div>
-            <div class="laser"></div>
-            <div class="smoke"></div>
-        </div>
     </header>
 
 <section class="competing-offers">
+      <div class="connecting-arrow">
+    <svg viewBox="0 0 500 150" preserveAspectRatio="none">
+      <path d="M50,120 Q250,-50 450,120" 
+            fill="transparent" 
+            stroke="#B9A1FF" 
+            stroke-width="3"
+            stroke-dasharray="0" />
+      <!-- Ponta da seta esquerda -->
+      <polygon points="50,120 60,110 60,130" fill="#B9A1FF"/>
+      <!-- Ponta da seta direita -->
+      <polygon points="450,120 440,110 440,130" fill="#B9A1FF"/>
+    </svg>
+  </div>
+
+
   <div class="offer-container">
     <div class="offer-box">
       <h3>Dos Louvores Mais Tocados ➡️</h3>
@@ -54,7 +61,6 @@
       </div>
     </div>
 
-
     <div class="offer-box">
       <h3>Dos Louvores Mais Tocados ⬅️</h3>
       <div class="offer-content">
@@ -67,10 +73,9 @@
       </div>
     </div>
   </div>
-</section>
 
-    <!-- Hero Section -->
-    <section class="hero">
+  </section>
+  
         <div class="container">
             <div class="hero-content-wrapper">
                 <div class="hero-image">
