--- a/index.html
+++ b/index.html
@@ -87,110 +87,205 @@
     </div>
 </section>
 
-    <!-- Instruments Section -->
-    <section id="instruments" class="instruments-section">
-        <div class="container">
-            <h2>ESCOLHA SEU INSTRUMENTO</h2>
-            <p class="section-subtitle">Partituras individuais por metade do preço</p>
-            
-            <div class="instruments-grid">
-                <!-- Sax Alto -->
-                <div class="instrument-card" data-instrument="sax-alto">
-                    <div class="instrument-image">
-                        <img src="imagens/sax-alto.png" alt="Sax Alto">
-                    </div>
-                    <h3>SAX ALTO</h3>
-                    <p class="instrument-description">
-                        partituras em PDF
-                        <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
-                    </p>
-                    <div class="price-container">
-                        <span class="old-price">R$129,90</span>
-                        <span class="new-price">R$64,90</span>
-                    </div>
-                    <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
-                        <button class="btn-buy">COMPRAR AGORA</button>
-                    </a>
+<!-- Instruments Section -->
+<section id="instruments" class="instruments-section">
+    <div class="container">
+        <h2>ESCOLHA SEU INSTRUMENTO</h2>
+        <p class="section-subtitle">Partituras individuais por metade do preço</p>
+        
+        <div class="instruments-grid">
+            <!-- Sax Alto 1 (15 arranjos) -->
+            <div class="instrument-card" data-instrument="sax-alto">
+                <div class="instrument-image">
+                    <img src="imagens/sax-alto.png" alt="Sax Alto">
                 </div>
+                <h3>SAX ALTO</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
 
-                <!-- Sax Tenor -->
-                <div class="instrument-card" data-instrument="sax-tenor">
-                    <div class="instrument-image">
-                        <img src="imagens/sax-tenor.png" alt="Sax Tenor">
-                    </div>
-                    <h3>SAX TENOR</h3>
-                    <p class="instrument-description">
-                        partituras em PDF
-                        <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
-                    </p>
-                    <div class="price-container">
-                        <span class="old-price">R$129,90</span>
-                        <span class="new-price">R$64,90</span>
-                    </div>
-                    <a href="https://pay.kiwify.com.br/zstqory" target="_blank">
-                        <button class="btn-buy">COMPRAR AGORA</button>
-                    </a>
+            <!-- Sax Alto 2 (50 arranjos) -->
+            <div class="instrument-card" data-instrument="sax-alto">
+                <div class="instrument-image">
+                    <img src="imagens/sax-alto.png" alt="Sax Alto">
                 </div>
+                <h3>SAX ALTO</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
 
-                <!-- Trompete -->
-                <div class="instrument-card" data-instrument="trompete">
-                    <div class="instrument-image">
-                        <img src="imagens/trompete.png" alt="Trompete">
-                    </div>
-                    <h3>TROMPETE</h3>
-                    <p class="instrument-description">
-                        partituras em PDF
-                        <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
-                    </p>
-                    <div class="price-container">
-                        <span class="old-price">R$129,90</span>
-                        <span class="new-price">R$64,90</span>
-                    </div>
-                    <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
-                        <button class="btn-buy">COMPRAR AGORA</button>
-                    </a>
+            <!-- Sax Tenor 1 (15 arranjos) -->
+            <div class="instrument-card" data-instrument="sax-tenor">
+                <div class="instrument-image">
+                    <img src="imagens/sax-tenor.png" alt="Sax Tenor">
                 </div>
+                <h3>SAX TENOR</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/zstqory" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
 
-                <!-- Trombone -->
-                <div class="instrument-card" data-instrument="trombone">
-                    <div class="instrument-image">
-                        <img src="imagens/trombone.png" alt="Trombone">
-                    </div>
-                    <h3>TROMBONE</h3>
-                    <p class="instrument-description">
-                        partituras em PDF
-                        <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
-                    </p>
-                    <div class="price-container">
-                        <span class="old-price">R$129,90</span>
-                        <span class="new-price">R$64,90</span>
-                    </div>
-                    <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
-                        <button class="btn-buy">COMPRAR AGORA</button>
-                    </a>
+            <!-- Sax Tenor 2 (50 arranjos) -->
+            <div class="instrument-card" data-instrument="sax-tenor">
+                <div class="instrument-image">
+                    <img src="imagens/sax-tenor.png" alt="Sax Tenor">
                 </div>
+                <h3>SAX TENOR</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/zstqory" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
 
-                <!-- Melodia e Cifra -->
-                <div class="instrument-card" data-instrument="melodia">
-                    <div class="instrument-image">
-                        <img src="imagens/partitura.png" alt="Melodia e Cifra">
-                    </div>
-                    <h3>MELODIA & CIFRA</h3>
-                    <p class="instrument-description">
-                        para Violão, Guitarra, Piano e Baixo
-                        <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
-                    </p>
-                    <div class="price-container">
-                        <span class="old-price">R$129,90</span>
-                        <span class="new-price">R$64,90</span>
-                    </div>
-                    <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
-                        <button class="btn-buy">COMPRAR AGORA</button>
-                    </a>
+            <!-- Trompete 1 (15 arranjos) -->
+            <div class="instrument-card" data-instrument="trompete">
+                <div class="instrument-image">
+                    <img src="imagens/trompete.png" alt="Trompete">
                 </div>
+                <h3>TROMPETE</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
+
+            <!-- Trompete 2 (50 arranjos) -->
+            <div class="instrument-card" data-instrument="trompete">
+                <div class="instrument-image">
+                    <img src="imagens/trompete.png" alt="Trompete">
+                </div>
+                <h3>TROMPETE</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
+
+            <!-- Trombone 1 (15 arranjos) -->
+            <div class="instrument-card" data-instrument="trombone">
+                <div class="instrument-image">
+                    <img src="imagens/trombone.png" alt="Trombone">
+                </div>
+                <h3>TROMBONE</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
+
+            <!-- Trombone 2 (50 arranjos) -->
+            <div class="instrument-card" data-instrument="trombone">
+                <div class="instrument-image">
+                    <img src="imagens/trombone.png" alt="Trombone">
+                </div>
+                <h3>TROMBONE</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3>  
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
+
+            <!-- Melodia e Cifra 1 (15 arranjos) -->
+            <div class="instrument-card" data-instrument="melodia">
+                <div class="instrument-image">
+                    <img src="imagens/partitura.png" alt="Melodia e Cifra">
+                </div>
+                <h3>MELODIA & CIFRA</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
+            </div>
+
+            <!-- Melodia e Cifra 2 (50 arranjos) -->
+            <div class="instrument-card" data-instrument="melodia">
+                <div class="instrument-image">
+                    <img src="imagens/partitura.png" alt="Melodia e Cifra">
+                </div>
+                <h3>MELODIA & CIFRA</h3>
+                <p class="instrument-description">
+                    <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
+                    <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
+                </p>
+                <div class="price-container">
+                    <span class="old-price">R$129,90</span>
+                    <span class="new-price">R$64,90</span>
+                </div>
+                <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
+                    <button class="btn-buy">COMPRAR AGORA</button>
+                </a>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- 30 Arranjos Section -->
     <section id="30-arranjos" class="featured-combo">
