--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <div class="offer-container">
     <div class="offer-box">
-      <h3><span style="color: yellow;">15 Arranjos</span>/Naipe de METAIS ➡️</h3>
+      <h3><span style="color: yellow;">15 Arranjos completos</span>/Naipe de METAIS </h3>
       <div class="offer-content">
         
         <p class="old-price">De R$ 1.050</p>
@@ -62,7 +62,7 @@
     </div>
 
     <div class="offer-box">
-      <h3><span style="color: yellow;">50 Arranjos</span>/Naipe de METAIS ⬅️</h3>
+      <h3><span style="color: yellow;">50 Arranjos completos</span>/Naipe de METAIS ⬅</h3>
       <div class="offer-content">
         
         <p class="old-price">De R$ 3.500</p>
