--- a/index.html
+++ b/index.html
@@ -504,32 +504,29 @@
         </div>
     </section>
 
-    <!-- Bonus Section -->
-    <section class="featured-combo">
-        <div class="container">
-            <div class="featured-description">🎁 BÔNUS INCLUSO</div>
-            <div class="featured-instrument">
-                <div class="featured-image">
-                    <img src="imagens/bonus-videoaulas.jpg" alt="Videoaulas de Técnicas para Metais">
-                </div>
-                <div class="featured-info">
-                    <h3>Videoaulas: Técnicas Avançadas para Metais</h3>
-                    <ul class="combo-features">
-                        <li><i>✓</i> Respiração e embocadura para metais</li>
-                        <li><i>✓</i> Técnicas de articulação e staccato</li>
-                        <li><i>✓</i> Como fazer solos criativos nos louvores</li>
-                        <li><i>✓</i> Exercícios práticos para melhorar sua técnica</li>
-                        <li><i>✓</i> Bônus incluso nos pacotes completos</li>
-                    </ul>
-                    <div class="featured-price">
-                        <div class="price-comparison">
-                            <span class="final-price">INCLUSO NOS PACOTES DE 30 E 50 ARRANJOS</span>
-                        </div>
+<!-- Bonus Section -->
+<section class="featured-combo">
+    <div class="container">
+        <div class="featured-description">🎁 BÔNUS INCLUSO</div>
+        <div class="featured-instrument">
+            <div class="featured-info">
+                <h3>Videoaulas: Técnicas Avançadas para Metais</h3>
+                <ul class="combo-features">
+                    <li><i>✓</i> Respiração e embocadura para metais</li>
+                    <li><i>✓</i> Técnicas de articulação e staccato</li>
+                    <li><i>✓</i> Como fazer solos criativos nos louvores</li>
+                    <li><i>✓</i> Exercícios práticos para melhorar sua técnica</li>
+                    <li><i>✓</i> Bônus incluso nos pacotes completos</li>
+                </ul>
+                <div class="featured-price">
+                    <div class="price-comparison">
+                        <span class="final-price">INCLUSO NOS PACOTES DE 30 E 50 ARRANJOS</span>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- CTA Section -->
     <section class="cta-section">
@@ -586,7 +583,7 @@
     <footer>
         <div class="container">
             <div class="footer-logo">
-                <img src="imagens/logo-metal.png" alt="Arranjos para Metais">
+                <img src="imagens/logo.png" alt="Arranjos para Metais">
             </div>
             
             <div class="footer-copyright">
