--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
       </div>
     </div>
   </div>
+
+  <div class="whatsapp-container">
+  <a href="https://wa.me/5561983164894?text=Olá!%20Eu%20venho%20da%20página%20de%20compras%20dos%20arranjos%20para%20metais.%20Gostaria%20de%20escolher%20as%2015,%2050%20ou%20100%20músicas%20de%20minha%20preferência%20(aceito%20a%20taxa%20de%2030%%20a%20mais%20no%20valor%20final).%20Meu%20nome%20é:" 
+     class="whatsapp-btn" 
+     target="_blank" 
+     rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+    quero escolher as 15, 50 ou 100 músicas de minha preferência
+  </a>
+</div>
+
 </section>
 
 <section>
@@ -619,13 +630,12 @@
         </div>
     </footer>
 
-    <!-- Botão Flutuante do WhatsApp -->
-    <a href="https://wa.me/SEUNUMERO?text=Olá! Eu venho da página de compras dos arranjos para metais. Meu nome é:" 
-       class="whatsapp-float" 
-       target="_blank" 
-       rel="noopener noreferrer">
-        <i class="fab fa-whatsapp"></i>
-    </a>
+<a href="https://wa.me/5561983164894?text=Olá!%20Eu%20venho%20da%20página%20de%20compras%20dos%20arranjos%20para%20metais.%20Gostaria%20de%20escolher%20as%2015,%2050%20ou%20100%20músicas%20de%20minha%20preferência%20(aceito%20a%20taxa%20de%2030%%20a%20mais%20no%20valor%20final).%20Meu%20nome%20é:" 
+   class="whatsapp-float" 
+   target="_blank" 
+   rel="noopener noreferrer">
+    <i class="fab fa-whatsapp"></i>
+</a>
 
     <!-- Botão Flutuante da Lista de Músicas -->
     <div class="floating-music-btn">
