--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
                     <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
                 </p>
                 <div class="price-container">
-                    <span class="old-price">R$3.500</span>
-                    <span class="new-price">R$399,90</span>
+                    <span class="old-price">R$1.050</span>
+                    <span class="new-price">R$199,90</span>
                 </div>
                 <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                     <button class="btn-buy">COMPRAR AGORA</button>
@@ -241,8 +241,8 @@
                     <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
                 </p>
                 <div class="price-container">
-                    <span class="old-price">R$3.500</span>
-                    <span class="new-price">R$399,90</span>
+                    <span class="old-price">R$1.050</span>
+                    <span class="new-price">R$199,90</span>
                 </div>
                 <a href="https://pay.kiwify.com.br/zstqory" target="_blank">
                     <button class="btn-buy">COMPRAR AGORA</button>
@@ -299,8 +299,8 @@
                     <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
                 </p>
                 <div class="price-container">
-                    <span class="old-price">$3.500</span>
-                    <span class="new-price">R$399,90</span>
+                    <span class="old-price">$1.050</span>
+                    <span class="new-price">R$199,90</span>
                 </div>
                 <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
                     <button class="btn-buy">COMPRAR AGORA</button>
@@ -357,8 +357,8 @@
                     <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
                 </p>
                 <div class="price-container">
-                    <span class="old-price">R$3.500</span>
-                    <span class="new-price">R$399,90</span>
+                    <span class="old-price">R$1.050</span>
+                    <span class="new-price">R$199,90</span>
                 </div>
                 <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
                     <button class="btn-buy">COMPRAR AGORA</button>
@@ -414,8 +414,8 @@
             <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
         </div>
         <div class="price-container">
-            <span class="old-price">R$3.500</span>
-            <span class="new-price">R$399,90</span>
+            <span class="old-price">R$1.050</span>
+            <span class="new-price">R$199,90</span>
         </div>
         <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
             <button class="btn-buy">COMPRAR AGORA</button>
@@ -630,7 +630,7 @@
         </div>
     </footer>
 
-<a href="https://wa.me/5561983164894?text=Olá!%20Eu%20venho%20da%20página%20de%20compras%20dos%20arranjos%20para%20metais.%20Gostaria%20de%20escolher%20as%2015,%2050%20ou%20100%20músicas%20de%20minha%20preferência%20(aceito%20a%20taxa%20de%2030%%20a%20mais%20no%20valor%20final).%20Meu%20nome%20é:" 
+<a href="https://wa.me/5561983164894?text=Tenho%20uma%20dúvida%20sobre%20os%20arranjos%20para%20metais.%20Meu%20nome%20é:" 
    class="whatsapp-float" 
    target="_blank" 
    rel="noopener noreferrer">
