--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     </div>
     <div class="header-content">
 <h1>
-  <span class="first-line">Arranjos para</span><br>
-  <span class="second-line">"NAIPE DE METAIS"</span>
-</h1>
+    <span class="first-line">Arranjos para</span><br>
+    <span class="second-line"><span style="color: black;">"NAIPE DE METAIS"</span></span>
+  </h1>
 
 
 
@@ -100,13 +100,13 @@
     </div>
   </div>
 
-  <div class="whatsapp-container">
-  <a href="https://wa.me/5561983164894?text=Olá!%20Eu%20venho%20da%20página%20de%20compras%20dos%20arranjos%20para%20metais.%20Gostaria%20de%20escolher%20as%2015,%2050%20ou%20100%20músicas%20de%20minha%20preferência%20(aceito%20a%20taxa%20de%2030%%20a%20mais%20no%20valor%20final).%20Meu%20nome%20é:" 
+<div class="whatsapp-container">
+  <a href="https://wa.me/5561983164894?text=Olá!%20Gostaria%20de%20escolher%20as%2015,%2050%20ou%20100%20músicas%20de%20minha%20preferência%20(aceito%20a%20taxa%20de%2030%%20a%20mais%20no%20valor%20final).%20Meu%20instrumento%20é:%0A%0A- Arranjo completo%0A- Sax alto%0A- Sax tenor%0A- Trompete%0A- Trombone%0A- Melodia e CIFRA%0A%0AMeu nome é:" 
      class="whatsapp-btn" 
      target="_blank" 
      rel="noopener noreferrer">
     <i class="fab fa-whatsapp"></i>
-    quero escolher as 15, 50 ou 100 músicas de minha preferência
+    quero escolher as 15, 50 ou 100 músicas de minha preferência (taxa de 30% a mais no valor final)
   </a>
 </div>
 
