--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
 
     <!-- Botão Flutuante da Lista de Músicas -->
     <div class="floating-music-btn">
-        <a href="#instruments" class="btn-alternative">
-            <span>ver instrumentos</span>
+        <a href="#song-list" class="btn-alternative">
+            <span>ver músicas</span>
             <i class="fas fa-music"></i>
         </a>
     </div>
