--- a/index.html
+++ b/index.html
@@ -14,23 +14,16 @@
     <div class="background-lights"></div>
     
     <!-- Header -->
-<!-- Header -->
-<!-- Header -->
 <header>
   <div class="container">
     <div class="logo">
       <img src="imagens/logo.png" alt="Arranjos para Metais">
     </div>
     <div class="header-content">
-<h1>
-    <span class="first-line">Arranjos para</span><br>
-    <span class="second-line"><span style="color: black;">"NAIPE DE METAIS"</span></span>
-  </h1>
-
-
-
-
-
+      <div class="title-container">
+        <div class="title-line-1">Arranjos para</div>
+        <div class="title-line-2">NAIPE DE METAIS</div>
+      </div>
       <p></p>
       <div class="countdown">
         <p>Oferta especial por tempo limitado:</p>
