--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
               <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$1.050</span>
-                  <span class="new-price">R$199,90</span>
+                  <span class="old-price">R$525,00</span>
+                  <span class="new-price">R$99,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -187,8 +187,8 @@
               <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$3.500</span>
-                  <span class="new-price">R$399,90</span>
+                  <span class="old-price">R$1.750</span>
+                  <span class="new-price">R$199,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -204,8 +204,8 @@
               <h3><strong><span style="color: yellow;">100 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$7.000</span>
-                  <span class="new-price">R$699,90</span>
+                  <span class="old-price">R$3.500</span>
+                  <span class="new-price">R$314,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -241,8 +241,8 @@
               <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">$1.050</span>
-                  <span class="new-price">R$199,90</span>
+                  <span class="old-price">R$525,00</span>
+                  <span class="new-price">R$99,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -258,8 +258,8 @@
               <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">$3.500</span>
-                  <span class="new-price">R$399,90</span>
+                  <span class="old-price">R$1.750</span>
+                  <span class="new-price">R$199,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -275,8 +275,8 @@
               <h3><strong><span style="color: yellow;">100 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$7.000</span>
-                  <span class="new-price">R$699,90</span>
+                  <span class="old-price">R$3.500</span>
+                  <span class="new-price">R$314,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -312,8 +312,8 @@
               <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">$1.050</span>
-                  <span class="new-price">R$199,90</span>
+                  <span class="old-price">R$525,00</span>
+                  <span class="new-price">R$99,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -329,8 +329,8 @@
               <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">$3.500</span>
-                  <span class="new-price">R$399,90</span>
+                  <span class="old-price">R$1.750</span>
+                  <span class="new-price">R$199,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/Culig2h" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -345,8 +345,8 @@
               <h3><strong><span style="color: yellow;">100 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$7.000</span>
-                  <span class="new-price">R$699,90</span>
+                  <span class="old-price">R$3.500</span>
+                  <span class="new-price">R$314,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -382,8 +382,8 @@
               <h3><strong><span style="color: yellow;">15 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$1.050</span>
-                  <span class="new-price">R$199,90</span>
+                  <span class="old-price">R$525,00</span>
+                  <span class="new-price">R$99,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -399,8 +399,8 @@
               <h3><strong><span style="color: yellow;">50 arranjos</span></strong></h3>  
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$3.500</span>
-                  <span class="new-price">R$399,90</span>
+                  <span class="old-price">R$1.750</span>
+                  <span class="new-price">R$199,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -415,8 +415,8 @@
               <h3><strong><span style="color: yellow;">100 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$7.000</span>
-                  <span class="new-price">R$699,90</span>
+                  <span class="old-price">R$3.500/span>
+                  <span class="new-price">R$314,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -454,8 +454,8 @@
                   <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               </div>
               <div class="price-container">
-                  <span class="old-price">R$1.050</span>
-                  <span class="new-price">R$199,90</span>
+                  <span class="old-price">R$525,00</span>
+                  <span class="new-price">R$99,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -474,8 +474,8 @@
                   <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               </div>
               <div class="price-container">
-                  <span class="old-price">R$3.500</span>
-                  <span class="new-price">R$399,90</span>
+                  <span class="old-price">R$1.750</span>
+                  <span class="new-price">R$199,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/LXMGVus" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
@@ -494,8 +494,8 @@
               <h3><strong><span style="color: yellow;">100 arranjos</span></strong></h3> 
               <img src="imagens/pdf-metal.png" alt="" class="inline-icon">
               <div class="price-container">
-                  <span class="old-price">R$7.000</span>
-                  <span class="new-price">R$699,90</span>
+                  <span class="old-price">R$3.500</span>
+                  <span class="new-price">R$314,95</span>
               </div>
               <a href="https://pay.kiwify.com.br/8uUlSA5" target="_blank">
                   <button class="btn-buy">COMPRAR AGORA</button>
