--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
               <div class="instrument-image">
                   <img src="imagens/melodia e cifras.png" alt="Melodia e Cifra">
               </div>
-              <h3>TROMBONE</h3>
+              <h3>MELODIA & CIFRA</h3>
               <div class="instrument-description">
                   <p class="instrument-types">(teclado, guitarra, violão ...)</p>
               </div>
