--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
             <div id="countdown-timer">
               <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
             </div>
+            <div id="clientes-online">
+    📊 Neste momento, <span id="qtd-clientes">12</span> pessoas estão visualizando esta página.
+</div>
+
           </div>
         </div>
       </div>
@@ -146,6 +150,11 @@
 
     <br>
     <br>
+
+    <div id="urgencia-banner">
+    🔥 Últimas unidades disponíveis! Garanta já o seu!
+</div>
+
 
     <!-- Seção de Instrumentos -->
     <section>
@@ -507,6 +516,14 @@
           </div>
       </div>
     </section>
+
+    <div id="autoridade-box">
+    <img src="imagens/satisfaction.png" alt="Selo de Confiança" id="selo-img">
+    <p>Reconhecido por <strong>1000+ clientes satisfeitos</strong></p>
+</div>
+
+
+
 <!-- Video Demonstration Section - Versão Corrigida -->
 <section class="video-section">
   <div class="container">
@@ -530,6 +547,8 @@
 </div>
   </div>
 </section>
+
+
 
     <!-- Song List -->
     <section id="song-list" class="song-list">
